2003-08-22 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Small cleanup.
	
2003-08-22 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Update the volume sliders when the audio
	channels are started.
	
2003-08-22 Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp, src/chat_window.cpp, src/config.cpp, 
	src/endpoint.cpp, src/endpoint.h, src/gnomemeeting.cpp, 
	src/main_window.cpp, src/urlhandler.cpp: Removed a few 
	theorically possible deadlocks. Removed GetCurrentConnection
	so that we use the OpenH323 one with Locks. Made sure 2 mutexes
	are never taken in 2 different orders in 2 different
	threads, including for the GDK lock.
	
2003-08-20  William Jon McCann  <mccann@jhu.edu>

	* src/endpoint.cpp (SetSoundChannelPlayDevice):
	(SetSoundChannelRecordDevice):  Fix build error.

2003-08-20 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Optimized SetSoundChannelPlayerDevice and 
	SetSoundChannelRecorderDevice so that they do not rebuild the
	devices list if GM already has it in its internal structures.
	
2003-08-19 Damien Sandras  <dsandras@seconix.com>

	* src/common.h: Added widgets for the managers in the druid.
	
	* src/config.cpp: Updates the druid when the manager changes.
	
	* src/druid.cpp: Added the managers.
	
	* src/endpoint.cpp, src/endpoint.h: Added function to get
	the manager name. Make sure UpdateConfig doesn't update the devices
	list if the manager has not change after a call.
	
	* src/lid.cpp, src/main_window.cpp, src/sound_handling.cpp,
	src/sound_handling.h: Removed mixers related things.
	
	* src/videograbber.cpp, src/videograbber.h: Fixed video tester.
	Removed color_format variable.	
	
2003-08-18 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.

	* gnomemeeting.schemas.in.in: Removed mixers related keys
	and added 2 keys for the video and audio managers.

	* src/common.h: Added widgets for the audio and video managers and