@@ -397,9 +397,6 @@ void GMVideoGrabber::VGOpen (void)
 	error_code = 0;
 #endif
       else
-	if (!grabber->SetFrameSizeConverter (width, height, FALSE))
-	  error_code = 5;
-      else
 	if (!grabber->SetVideoFormat(video_format))
 	  error_code = 2;
       else
@@ -411,6 +408,9 @@ void GMVideoGrabber::VGOpen (void)
       else
 	if (!grabber->SetFrameRate (30))
 	  error_code = 4;
+      else
+	if (!grabber->SetFrameSizeConverter (width, height, FALSE))
+	  error_code = 5;
     }
 
 
@@ -738,9 +738,6 @@ void GMVideoTester::Main ()
 	error_code = 0;
 #endif
       else
-	if (!grabber->SetFrameSizeConverter (width, height, FALSE))
-	  error_code = 5;
-      else
 	if (!grabber->SetVideoChannelFormat (0,  PVideoDevice::Auto))
 	  error_code = 2;
       else
@@ -749,6 +746,9 @@ void GMVideoTester::Main ()
       else
 	if (!grabber->SetFrameRate (10))
 	  error_code = 4;
+      else
+	if (!grabber->SetFrameSizeConverter (width, height, FALSE))
+	  error_code = 5;
       else
 	grabber->Close ();
 
